OIDC UserInfo Endpoint
Signed-off-by: Stephen Crawford <steecraw@amazon.com>